Fix HTML spacing to make more readable

--- a/main.css
+++ b/main.css
@@ -101,7 +101,7 @@ a {
 header {
   /* padding-top: 10px; */
   /* padding-bottom: 10px; */
-  background-color: #1160AA;
+  background-color: #BC5148;
   width: 100%;
   flex: 1;
 }
@@ -297,7 +297,7 @@ line-height: 40px;
   padding: 15px;
 }
 
-.interests-text > a{
+.interests-text > a {
   font-size: 36px;
   color: #E9D2B3;
 }
@@ -314,61 +314,6 @@ line-height: 40px;
 } */
 
 
-.gr_custom_container_ {
-/* customize your Goodreads widget container here*/
-  border: 1px solid gray;
-  border-radius:10px;
-  padding: 10px 5px 10px 5px;
-  background-color: #FFF;
-  color: #000;
-  max-width: 70%;
-  margin: 0 auto;
-  margin-bottom: 10px;
-}
-
-.gr_custom_header_ {
-/* customize your Goodreads header here*/
-border-bottom: 1px solid gray;
-width: 100%;
-margin-bottom: 5px;
-text-align: center;
-font-size: 120%
-}
-
-.gr_custom_each_container_ {
-/* customize each individual book container here */
-width: 100%;
-clear: both;
-margin-bottom: 10px;
-overflow: auto;
-padding-bottom: 4px;
-border-bottom: 1px solid #aaa;
-}
-
-.gr_custom_book_container_ {
-/* customize your book covers here */
-overflow: hidden;
-height: 60px;
-float: left;
-margin-right: 4px;
-width: 39px;
-}
-
-.gr_custom_author_ {
-/* customize your author names here */
-font-size: 10px;
-}
-
-.gr_custom_tags_ {
-/* customize your tags here */
-font-size: 10px;
-color: gray;
-}
-
-.gr_custom_rating_ {
-/* customize your rating stars here */
-float: right;
-}
 
 .lifting-image, .spartan-image {
   max-width: 80%;
